REGRESSION (r153917): Chart for the Category Explorer within Quicken Essentials does not draw until you force a redraw https://bugs.webkit.org/show_bug.cgi?id=133228 <rdar://problem/15221231>

Reviewed by Simon Fraser.

* platform/RuntimeApplicationChecks.cpp: (WebCore::applicationIsQuickenEssentials):
* platform/RuntimeApplicationChecks.h:
Added a check for Quicken Essentials.

* platform/mac/WidgetMac.mm: (WebCore::Widget::paint): Don't do an early return
for Quicken Essentials, it depends on drawing to update its layer.


Canonical link: https://commits.webkit.org/151243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169276 268f45cc-cd09-0410-ab3c-d52691b4dbfc