Source/WebCore/platform/mac/WidgetMac.mm
@@ -36,6 +36,7 @@
 #import "GraphicsContext.h"
 #import "Page.h"
 #import "PlatformMouseEvent.h"
+#import "RuntimeApplicationChecks.h"
 #import "ScrollView.h"
 #import "WebCoreFrameView.h"
 #import "WebCoreView.h"
@@ -193,7 +194,8 @@ void Widget::paint(GraphicsContext* p, const IntRect& r)
     // We don't want to paint the view at all if it's layer backed, because then we'll end up
     // with multiple copies of the view contents, one in the view's layer itself and one in the
     // WebHTMLView's backing store (either a layer or the window backing store).
-    if (view.layer)
+    // However, Quicken Essentials has a plug-in that depends on drawing to update the layer (see <rdar://problem/15221231>).
+    if (view.layer && !applicationIsQuickenEssentials())
         return;
 
     // Take a reference to this Widget, because sending messages to the views can invoke arbitrary
